--- a/styles/stylus/sections/_footer.styl
+++ b/styles/stylus/sections/_footer.styl
@@ -13,15 +13,12 @@ footer
 
 .sub-footer
   height 150px
-  width 100%
   cf()
 
   footer
     width 90%
     +above(768px)
-      width 100%
       text-align right
-      padding-right 76px
 
     .icon_circle
       stroke flat-blue-1
